--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <h1>After DOM</h1>
     </header>
-    <section>
+    <section id="compras">
         <h2>Productos</h2>
         <div id="productos">
 
